# prime-envs

./: .gitignore  README.md
environments/golf/: README.md  generate_boards.py  golf.py  (+5 more)
environments/gpt-world/: .gitignore  README.md  generate_boards.py  gpt_world.py  gpt_world_core.py  plan.md  pyproject.toml  test_generate_boards.py  test_gpt_world_core.py  visualize_rollouts.py
environments/gpt-world/configs/rl/: gpt-world-local-smoke.toml  gpt-world-qwen3-4b-instruct.toml
games/hangman/: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  guide.md  prompt.md  pyproject.toml  secrets.env
games/hangman/configs/: endpoints.mlx.py  endpoints.vllm.py
games/hangman/configs/eval/: hangman-mlx.toml  hangman-vllm.toml
games/hangman/configs/rl/: hangman-large.toml  hangman-llama32-3b-instruct.toml  hangman-medium-thinking.toml  hangman-medium.toml  hangman-qwen3-30b-a3b-thinking.toml  hangman-qwen3-4b-instruct.toml  hangman-small.toml  hangman.toml
games/hangman/environments/hangman_agent/: README.md  pyproject.toml
games/hangman/environments/hangman_agent/.prime/: .env-metadata.json
games/hangman/environments/hangman_agent/hangman_agent/: env.py  game.py  generator.py  hangman_agent.py
games/hangman/environments/hangman_agent/hangman_agent/data/: __init__.py  lexicon.tsv
games/hangman/environments/hangman_agent/outputs/evals/hangman_agent--gpt-4.1-mini/0e66d07a/: metadata.json  results.jsonl
games/hangman/environments/hangman_agent/outputs/evals/hangman_agent--gpt-4.1-mini/1d9bfeba/: metadata.json  results.jsonl
games/hangman/environments/hangman_agent/outputs/evals/hangman_agent--gpt-4.1-mini/53366283/: metadata.json  results.jsonl
games/hangman/environments/hangman_agent/outputs/evals/hangman_agent--gpt-4.1-mini/ca02313e/: metadata.json  results.jsonl
games/hangman/environments/hangman_agent/scripts/: build_lexicon.py
games/hangman/environments/hangman_agent/tests/: test_env.py  test_game.py  test_generator.py
games/hangman/hangman/: __init__.py  local_eval.py
games/hangman/tests/: test_endpoints_mlx.py  test_endpoints_vllm.py  test_local_eval.py
(+2 files in other folders)
