[project]
name = "gpt-world"
description = "Multi-turn hex-grid pathfinding environment based on GPT-World"
tags = ["games", "planning", "tool-use", "multiturn", "pathfinding"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10",
    "datasets>=2.18.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["gpt_world.py", "gpt_world_core.py", "README.md", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 8
rollouts_per_example = 3
