[project]
name = "hangman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31.0",
    "mlx-vlm>=0.4.0",
    "openai>=2.26.0",
    "verifiers>=0.1.10",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "hangman_agent",
    "pre-commit>=4.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.uv.sources]
hangman_agent = { path = "environments/hangman_agent", editable = true }

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
    "environments/hangman_agent/tests",
]
pythonpath = [
    ".",
    "environments/hangman_agent",
]

[tool.ruff]
target-version = "py310"
extend-exclude = [
    "environments/hangman_agent/outputs",
]
